# transcript-summariser-crewai

./: README.md  pyproject.toml
src/transcript_summariser_crew/: crew.py  main.py
src/transcript_summariser_crew/config/: agents.yaml  tasks.yaml
